objects/Veda_Error__c.object
<CustomObject>
    <fields>
        <fullName>Description_Code__c</fullName>
        <label>Description Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Container__c</fullName>
        <label>Input Container</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Fraud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Fraud</label>
        <referenceTo>Veda_Fraud__c</referenceTo>
        <relationshipLabel>Veda Error</relationshipLabel>
        <relationshipName>Veda_Error</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Error</label>
    <nameField>
        <label>Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>